[package]
name = "bnf_sampler"
version = "0.3.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate that uses recursive descent algorithm to ensure tokens produced by a large language model follow a Backus Naur Form schema."
repository = "https://github.com/Dan-wanna-M/bnf_sampler"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bnf = "0.5.0"
qp-trie = "0.8.1"
mimalloc = { version = "0.1.38", default-features = false }
rustc-hash = "1.1.0"
itertools = "0.12.1"
bit-set = "0.5.3"
nohash-hasher = "0.2.0"
regex = "1.9.3"
lazy_static = "1.4.0"
memchr = "2.5.0"
anyhow = "1.0.75"
