[package]
name = "bnf_sampler_pybinding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bnf_sampler_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "anyhow"] }
bnf_sampler = "0.3.5"
anyhow = "1.0.75"
rustc-hash = "1.1.0"
qp-trie = "0.8.1"
bit-set = "0.5.3"