[package]
name = "sampler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bnf = "0.5.0"
qp-trie = "0.8.1"
mimalloc = { version = "*", default-features = false }
rustc-hash = "1.1.0"
itertools = "0.11.0"